--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "ncc build index.ts -o ./dist",
+    "build": "ncc build ./src/index.ts -o ./dist",
     "test": "tsc && jest",
     "lint": "eslint . --ext .ts --fix"
   },
